@@ -1,5 +1,6 @@
 2011-05-03  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclListObj.c:	Tighten SetListFromAny().
 	* generic/tclDictObj.c:	Tighten SetDictFromAny().
 
 2011-05-02  Don Porter  <dgp@users.sourceforge.net>
